--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ nav {
 main {
     width: 73vw;
     margin: 0 auto;
+    padding-bottom: 100px;
 }
 
 section {
@@ -57,7 +58,7 @@ section {
 
 .purpose-right-text {
     width: 60%;
-    line-height: 32px
+    line-height: 32px;
     color: #999999;
     font-family: arial, sans-serif;
     font-size: 16px;
@@ -149,8 +150,9 @@ button {
 
 #footer {
     height: 200px;
-    width: 100vw;
+    min-width: 100%;
     background: black;
+    float: left;
 }
 
 
