--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ button {
 }
 
 #footer {
-    height: 300px;
+    height: 500px;
     min-width: 100%;
     background: #075988;
     float: left;
@@ -312,11 +312,12 @@ img.resize {
 
 .flex-footer div {
     padding-top: 20px;
-    padding-left: 200px;
+    padding-left: 100px;
     padding-right: 100px;
 }
 
 #flex-footer-el-1 {
+  
 
 }
 
@@ -325,14 +326,13 @@ img.resize {
 }
 
 #flex-footer-el-2 {
-    /*padding-left: 50px;
-    padding-top: 10px;*/
+
     float:right;
-    text-align: right;
+    text-align: left;
 }
 
 #flex-footer-el-3 {
-    padding-top: 10px;
+    padding-top: 0px;
     padding-left: 0;
     padding-right: 0;
 }
@@ -375,7 +375,7 @@ img.resize {
 }
 
 div {
-    border-color: coral;
+    border-color: white;
 }
 
 
