--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     overflow-x: hidden;
     margin: 0;
     background-color: white;
-    background-image: url('img/BG.svg');
-    background-size: 100%;
+    background-image: url('img/bground2.svg');
+    background-size: 60%;
     background-repeat: no-repeat;
     background-position: top;
 }
@@ -18,12 +18,14 @@ h1 {
 /* Add a black background color to the top navigation */
 .topnav {
     overflow: hidden;
-    text-align: center;
     padding-top:20px
 }
 
 .nav-menu {
     display: inline-block;
+    
+    
+    
 }
 
 /* Style the links inside the navigation bar */
@@ -32,11 +34,17 @@ h1 {
     padding: 1em 2.5em;
     text-decoration: none;
     font-size: 18px;
+
+ 
+
+
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    color: black;
+    color: black ;
+ 
+    
 }
 
 nav {
@@ -47,6 +55,7 @@ main {
     width: 73vw;
     margin: 0 auto;
     padding-bottom: 100px;
+    margin-top: 30px;
 }
 
 section {
