--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
 body {
-    font-family: Open Sans, Helvetica, sans-serif;
+   /* font-family: Open Sans, Helvetica, sans-serif;*/
+    font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
     margin: 0;
     background-color: white;
