--- a/resources.css
+++ b/resources.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
 body {
-    font-family: Open Sans, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
     margin: 0;
 }
@@ -7,17 +10,20 @@ body {
 h1 {
     text-align: center;
     font-weight: normal;
-    font-size: 48px;
+    font-size: 38px;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
+    text-align: left;
     overflow: hidden;
-    text-align: center;
+    padding-top: 20px
 }
 
 .nav-menu {
+   
     display: inline-block;
+    padding-left: 12%
 }
 
 /* Style the links inside the navigation bar */
