--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 h1 {
     text-align: center;
     font-weight: normal;
-    font-size: 42px;
+    font-size: 38px;
+
 }
 
 /* Add a black background color to the top navigation */
@@ -350,18 +351,24 @@ img.resize {
 
 #flex-footer-el-1 {
   
-text-align : center
+text-align : center;
+
 }
 
 #flex-footer-el-1 div {
     padding: 10px;
+   
 }
 
 #flex-footer-el-2 {
-
-    float:right;
+    float: right;
     text-align: left;
+    padding-top: 45px;
+   
+    
+    
 }
+
 
 #flex-footer-el-3 {
     padding-top: 0px;
