--- a/resources.css
+++ b/resources.css
@@ -135,9 +135,10 @@ main {
 }
 
 #footer {
-    height: 200px;
-    width: 100vw;
-    background: black;
+    height: 500px;
+    min-width: 100%;
+    background: #075988;
+    float: left;
 }
 
 .flex-footer {
@@ -149,12 +150,12 @@ main {
 
 .flex-footer div {
     padding-top: 20px;
-    padding-left: 200px;
+    padding-left: 100px;
     padding-right: 100px;
 }
 
 #flex-footer-el-1 {
-
+    text-align: center;
 }
 
 #flex-footer-el-1 div {
@@ -162,12 +163,13 @@ main {
 }
 
 #flex-footer-el-2 {
-    padding-left: 50px;
-    padding-top: 10px;
+    float: right;
+    text-align: left;
+    padding-top: 45px;
 }
 
 #flex-footer-el-3 {
-    padding-top: 10px;
+    padding-top: 0px;
     padding-left: 0;
     padding-right: 0;
 }
@@ -182,11 +184,11 @@ main {
 }
 
 .address-line {
-    color: gray;
+    color: white;
 }
 
 .phone {
-    color: gray;
+    color: white;
 }
 
 .circle {
