--- a/style.css
+++ b/style.css
@@ -192,8 +192,8 @@ button {
 /* Slideshow container */
 .slideshow-container {
     width: 500px;
-    padding-bottom: 60px; 
-    position: center;
+    padding-bottom: 200px; 
+    position: relative;
     margin: auto;
 }
 
@@ -201,7 +201,7 @@ button {
 /* Hide the images by default */
 .mySlides {
     width: 100%;
-    display: contents;
+    display: none;
 }
 
 .mySlides img{
@@ -241,9 +241,10 @@ button {
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
-    bottom: 8px;
+    bottom: 150px;
     width: 100%;
     text-align: center;
+
 }
 
 /* Number text (1/3 etc) */
@@ -439,6 +440,8 @@ div {
 .schedule_main {
   padding-top: 20%;
 }
+
+
 /*html, body {
     background: white;
     height: 100%;
