--- a/resources.css
+++ b/resources.css
@@ -151,10 +151,11 @@ main {
 .flex-footer div {
     padding-top: 20px;
     padding-left: 100px;
-    padding-right: 100px;
+    padding-right: 20px;
 }
 
 #flex-footer-el-1 {
+    text-align: center;
     text-align: left;
 }
 
@@ -165,7 +166,7 @@ main {
 #flex-footer-el-2 {
     float: right;
     text-align: left;
-    padding-top: 45px;
+    padding-top: 36px;
 }
 
 #flex-footer-el-3 {
